# monte-carlo

./: CMakeLists.txt
src/: main.cpp
